ウェルカムページ作成完了

--- a/src/package.json
+++ b/src/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.7",
+    "date-fns": "^2.29.3",
     "pinia": "^2.0.33",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
